4bsd/err1

xmonad.hs:18:1: error:
    Could not find module ‘XMonad.Hooks.SetWMName’
    Use -v to see a list of the files searched for.
   |
18 | import XMonad.Hooks.SetWMName
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:19:1: error:
    Could not find module ‘XMonad.Layout.Grid’
    Perhaps you meant XMonad.Layout (from xmonad-0.15)
    Use -v to see a list of the files searched for.
   |
19 | import XMonad.Layout.Grid
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:20:1: error:
    Could not find module ‘XMonad.Layout.ResizableTile’
    Use -v to see a list of the files searched for.
   |
20 | import XMonad.Layout.ResizableTile
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:21:1: error:
    Could not find module ‘XMonad.Layout.IM’
    Perhaps you meant XMonad.Layout (from xmonad-0.15)
    Use -v to see a list of the files searched for.
   |
21 | import XMonad.Layout.IM
   | ^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:22:1: error:
    Could not find module ‘XMonad.Layout.ThreeColumns’
    Use -v to see a list of the files searched for.
   |
22 | import XMonad.Layout.ThreeColumns
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:23:1: error:
    Could not find module ‘XMonad.Layout.NoBorders’
    Use -v to see a list of the files searched for.
   |
23 | import XMonad.Layout.NoBorders
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:24:1: error:
    Could not find module ‘XMonad.Layout.Circle’
    Use -v to see a list of the files searched for.
   |
24 | import XMonad.Layout.Circle
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:25:1: error:
    Could not find module ‘XMonad.Layout.PerWorkspace’
    Use -v to see a list of the files searched for.
   |
25 | import XMonad.Layout.PerWorkspace (onWorkspace)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:26:1: error:
    Could not find module ‘XMonad.Layout.Fullscreen’
    Use -v to see a list of the files searched for.
   |
26 | import XMonad.Layout.Fullscreen
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:27:1: error:
    Could not find module ‘XMonad.Util.EZConfig’
    Use -v to see a list of the files searched for.
   |
27 | import XMonad.Util.EZConfig
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:28:1: error:
    Could not find module ‘XMonad.Util.Run’
    Use -v to see a list of the files searched for.
   |
28 | import XMonad.Util.Run
   | ^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:29:1: error:
    Could not find module ‘XMonad.Hooks.DynamicLog’
    Use -v to see a list of the files searched for.
   |
29 | import XMonad.Hooks.DynamicLog
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:30:1: error:
    Could not find module ‘XMonad.Actions.Plane’
    Use -v to see a list of the files searched for.
   |
30 | import XMonad.Actions.Plane
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:31:1: error:
    Could not find module ‘XMonad.Hooks.ManageDocks’
    Use -v to see a list of the files searched for.
   |
31 | import XMonad.Hooks.ManageDocks
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:32:1: error:
    Could not find module ‘XMonad.Hooks.UrgencyHook’
    Use -v to see a list of the files searched for.
   |
32 | import XMonad.Hooks.UrgencyHook
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
